- And another +f + modes-on-join one...
- Made anti away flood system work just like anti nick flood (#0001205).
  NO_FLOOD_AWAY is now enabled and away-flood is set to 4 per 120s by default.
- Fixed a double OperOverride notice bug reported by DukePyrolator (#0001180).
- Doc fixes/updates reported by Angrywolf (#0001163, #0001176).
- Fixed a /rehash crash regarding badword all & regex badwords, reported by Angrywolf (#0001230).
- Fixed an old bug where allow::hostname localhost (or *@localhost) didn't work (#0001115).
- Fixed a chroot bug, reported by iceblade (#0001112).
- Badwords filtering is now only done for local clients, previously every server was filtering
  the message. This will reduce CPU usage, especially at hubs (#0001022).
- Will now strip/block color codes in quits if any channel the user is in has mode +S/+c.
- Temporarely added trace code for hunting down negative operator counts (#0001155).
- Made it so that with +M and user not +r and not voice/halfop/ops/etc the part message isn't
  shown, just like with +m.
- Added warn option to deny channel, this will send a notice to the eyes snomask when a user
  attempts to join. Suggested by Joolz (#0000992).
- Added clientsonly/serversonly/ssl/java flags to /stats P (#0000992).
- Added official-channels block. These channels are listed in /list even if they have 0 users.
- Fixed a crashbug introduced by +mu fixes 3 days ago (#0001237).
- Fixed a typo where /knock would say the channel is +I if +V is set, reported by Certus
- Improved SSL error msg sent to junk snomask.
- Fixed Q:lined nickname msgs during linking and a debug fix.
- Fixed a SVSMOTD crashbug (removing of motd).
- Fix-for-fix-for-+mu-fix (it was still crashing)... don't ask.
- Minor +f code tweaks.
- Added checks for ipv4 listen lines on ipv6 compile.
- Finished some of the extcmode code (memleaks).
- Fixed a problem in the new win32 resolver code
- Added HOOKTYPE_UNKUSER_QUIT (disconnects of unregistered clients).