@@ -360,13 +360,9 @@ void sendto_channel_butone(aClient *one, aClient *from, aChannel *chptr,
 			/*
 			 * Burst messages comes here..
 			 */
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_prefix_one(acptr, from, pattern, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	}
 	va_end(vl);
@@ -413,13 +409,9 @@ void sendto_channelprefix_butone(aClient *one, aClient *from, aChannel *chptr,
 				if (!IsSecure(acptr))
 					continue;
 #endif
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_prefix_one(acptr, from, pattern, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 			sentalong[i] = sentalong_marker;
 		}
 		else
@@ -433,19 +425,13 @@ void sendto_channelprefix_butone(aClient *one, aClient *from, aChannel *chptr,
 					if (!IsSecure(acptr->from))
 						continue;
 #endif
-#ifdef LINUX_PPC
 				va_start(vl, pattern);
-#endif
 				vsendto_prefix_one(acptr, from, pattern, vl);
-#ifdef LINUX_PPC
 				va_end(vl);
-#endif
 				sentalong[i] = sentalong_marker;
 			}
 		}
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -581,13 +567,9 @@ void sendto_chanops_butone(aClient *one, aChannel *chptr, char *pattern, ...)
 					   or user not not a channel op */
 		if (MyConnect(acptr) && IsRegisteredUser(acptr))
 		{
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(acptr, pattern, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	}
 	va_end(vl);
@@ -616,17 +598,13 @@ void sendto_serv_butone(aClient *one, char *pattern, ...)
 	{
 		if (!(cptr = local[i]) || (one && cptr == one->from))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 
 #ifdef NO_FDLIST
 		if (IsServer(cptr))
 #endif
 			vsendto_one(cptr, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -851,9 +829,7 @@ void sendto_serv_butone_quit(aClient *one, char *pattern, ...)
 	{
 		if (!(cptr = local[i]) || (one && cptr == one->from))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 
 #ifdef NO_FDLIST
 		if (IsServer(cptr) && !DontSendQuit(cptr))
@@ -861,9 +837,7 @@ void sendto_serv_butone_quit(aClient *one, char *pattern, ...)
 		if (!DontSendQuit(cptr))
 #endif
 			vsendto_one(cptr, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -892,9 +866,7 @@ void sendto_serv_butone_sjoin(aClient *one, char *pattern, ...)
 	{
 		if (!(cptr = local[i]) || (one && cptr == one->from))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 
 #ifdef NO_FDLIST
 		if (IsServer(cptr) && !SupportSJOIN(cptr))
@@ -902,9 +874,7 @@ void sendto_serv_butone_sjoin(aClient *one, char *pattern, ...)
 		if (!SupportSJOIN(cptr))
 #endif
 			vsendto_one(cptr, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -934,9 +904,7 @@ void sendto_serv_sjoin(aClient *one, char *pattern, ...)
 	{
 		if (!(cptr = local[i]) || (one && cptr == one->from))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 
 #ifdef NO_FDLIST
 		if (IsServer(cptr) && SupportSJOIN(cptr))
@@ -944,9 +912,7 @@ void sendto_serv_sjoin(aClient *one, char *pattern, ...)
 		if (SupportSJOIN(cptr))
 #endif
 			vsendto_one(cptr, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -976,9 +942,7 @@ void sendto_serv_butone_nickv2(aClient *one, char *pattern, ...)
 	{
 		if (!(cptr = local[i]) || (one && cptr == one->from))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 
 #ifdef NO_FDLIST
 		if (IsServer(cptr) && !SupportNICKv2(cptr))
@@ -986,9 +950,7 @@ void sendto_serv_butone_nickv2(aClient *one, char *pattern, ...)
 		if (!SupportNICKv2(cptr))
 #endif
 			vsendto_one(cptr, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -1018,9 +980,7 @@ void sendto_serv_nickv2(aClient *one, char *pattern, ...)
 	{
 		if (!(cptr = local[i]) || (one && cptr == one->from))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 
 #ifdef NO_FDLIST
 		if (IsServer(cptr) && SupportNICKv2(cptr))
@@ -1028,9 +988,7 @@ void sendto_serv_nickv2(aClient *one, char *pattern, ...)
 		if (SupportNICKv2(cptr))
 #endif
 			vsendto_one(cptr, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -1062,9 +1020,7 @@ void sendto_serv_nickv2_token(aClient *one, char *pattern, char *tokpattern,
 	{
 		if (!(cptr = local[i]) || (one && cptr == one->from))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, tokpattern);
-#endif
 
 #ifdef NO_FDLIST
 		if (IsServer(cptr) && SupportNICKv2(cptr) && !IsToken(cptr))
@@ -1079,9 +1035,7 @@ void sendto_serv_nickv2_token(aClient *one, char *pattern, char *tokpattern,
 		if (SupportNICKv2(cptr) && IsToken(cptr))
 #endif
 			vsendto_one(cptr, tokpattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -1117,19 +1071,13 @@ void sendto_common_channels(aClient *user, char *pattern, ...)
 				    !(is_chanownprotop(user, channels->chptr) || is_chanownprotop(cptr, channels->chptr)))
 					continue;
 				sentalong[cptr->slot] = sentalong_marker;
-#ifdef LINUX_PPC
 				va_start(vl, pattern);
-#endif
 				vsendto_prefix_one(cptr, user, pattern, vl);
-#ifdef LINUX_PPC
 				va_end(vl);
-#endif
 			}
 	if (MyConnect(user))
 	{
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 		vsendto_prefix_one(user, user, pattern, vl);
 	}
 	va_end(vl);
@@ -1152,13 +1100,9 @@ void sendto_channel_butserv(aChannel *chptr, aClient *from, char *pattern, ...)
 	for (va_start(vl, pattern), lp = chptr->members; lp; lp = lp->next)
 		if (MyConnect(acptr = lp->cptr))
 		{
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_prefix_one(acptr, from, pattern, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1176,13 +1120,9 @@ void sendto_channel_butserv_butone(aChannel *chptr, aClient *from, aClient *one,
 			continue;
 		if (MyConnect(acptr = lp->cptr))
 		{
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_prefix_one(acptr, from, pattern, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	}
 	va_end(vl);
@@ -1244,13 +1184,9 @@ void sendto_match_servs(aChannel *chptr, aClient *from, char *format, ...)
 			continue;
 		if (!BadPtr(mask) && IsServer(cptr) && match(mask, cptr->name))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, format);
-#endif
 		vsendto_one(cptr, format, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 }
@@ -1304,13 +1240,9 @@ void sendto_match_butone(aClient *one, aClient *from, char *mask, int what,
 		else if (!cansendlocal || (!(IsRegisteredUser(cptr) &&
 		    match_it(cptr, mask, what))))
 			continue;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 		vsendto_prefix_one(cptr, from, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -1332,13 +1264,9 @@ void sendto_all_butone(aClient *one, aClient *from, char *pattern, ...)
 	for (va_start(vl, pattern), i = 0; i <= LastSlot; i++)
 		if ((cptr = local[i]) && !IsMe(cptr) && one != cptr)
 		{
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_prefix_one(cptr, from, pattern, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1362,13 +1290,9 @@ void sendto_ops(char *pattern, ...)
 		{
 			(void)ircsprintf(nbuf, ":%s NOTICE %s :*** Notice -- ", me.name, cptr->name);
 			(void)strncat(nbuf, pattern, sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1395,13 +1319,9 @@ void sendto_failops(char *pattern, ...)
 			    me.name, cptr->name);
 			(void)strncat(nbuf, pattern,
 			    sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1426,13 +1346,9 @@ void sendto_umode(int umodes, char *pattern, ...)
 			    me.name, cptr->name);
 			(void)strncat(nbuf, pattern,
 			    sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1456,13 +1372,9 @@ void sendto_snomask(int snomask, char *pattern, ...)
 			    me.name, cptr->name);
 			(void)strncat(nbuf, pattern,
 			    sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1489,13 +1401,9 @@ void sendto_failops_whoare_opers(char *pattern, ...)
 			    me.name, cptr->name);
 			(void)strncat(nbuf, pattern,
 			    sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1521,13 +1429,9 @@ void sendto_locfailops(char *pattern, ...)
 			    me.name, cptr->name);
 			(void)strncat(nbuf, pattern,
 			    sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1553,13 +1457,9 @@ void sendto_opers(char *pattern, ...)
 			    me.name, cptr->name);
 			(void)strncat(nbuf, pattern,
 			    sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
@@ -1589,13 +1489,9 @@ void sendto_ops_butone(aClient *one, aClient *from, char *pattern, ...)
 		if (cptr->from == one)
 			continue;	/* ...was the one I should skip */
 		sentalong[i] = sentalong_marker;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 		vsendto_prefix_one(cptr->from, from, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -1627,13 +1523,9 @@ void sendto_opers_butone(aClient *one, aClient *from, char *pattern, ...)
 		if (cptr->from == one)
 			continue;	/* ...was the one I should skip */
 		sentalong[i] = sentalong_marker;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 		vsendto_prefix_one(cptr->from, from, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -1662,13 +1554,9 @@ void sendto_ops_butme(aClient *from, char *pattern, ...)
 		if (!strcmp(cptr->user->server, me.name))	/* a locop */
 			continue;
 		sentalong[i] = sentalong_marker;
-#ifdef LINUX_PPC
 		va_start(vl, pattern);
-#endif
 		vsendto_prefix_one(cptr->from, from, pattern, vl);
-#ifdef LINUX_PPC
 		va_end(vl);
-#endif
 	}
 	va_end(vl);
 	return;
@@ -1774,13 +1662,9 @@ void sendto_realops(char *pattern, ...)
 			    me.name, cptr->name);
 			(void)strncat(nbuf, pattern,
 			    sizeof(nbuf) - strlen(nbuf));
-#ifdef LINUX_PPC
 			va_start(vl, pattern);
-#endif
 			vsendto_one(cptr, nbuf, vl);
-#ifdef LINUX_PPC
 			va_end(vl);
-#endif
 		}
 	va_end(vl);
 	return;
